<resources>
    <string name="app_name">Run</string>
    <string name="google_maps_key">AIzaSyCG1bsafE9INj6WM4wXMAj-Kg-q8X4Xk0c</string>
    <string name="date">DATE</string>
    <string name="duration">DURATION</string>
    <string name="avg_speed">AVG SPEED</string>
    <string name="distance">DISTANCE</string>
    <string name="calories_burned">CALORIES BURNED</string>
    <string name="calories">CALORIES</string>
    <string name="avgspeed">AVGSPEED</string>
    <string name="time">TIME</string>
    <string name="welcome">Welcome!</string>
    <string name="tell_us_your_name">Tell us your name</string>
    <string name="your_name">Your Name</string>
    <string name="tell_us_your_weight">Tell us your weight</string>
    <string name="your_weight">Your weight</string>
    <string name="kg">Kg.</string>
    <string name="tell_us_your_height">Tell us your height</string>
    <string name="your_height">Your height</string>
    <string name="cm">Cm.</string>
    <string name="_continue">continue</string>
    <string name="_00_00_00_00">00:00:00:00</string>
    <string name="start">Start</string>
    <string name="finish_run">Finish Run</string>
    <string name="let_s_go_username">Let\'s go, USERNAME!</string>
    <string name="total_distance">Total Distance</string>
    <string name="_0km">0km</string>
    <string name="total_time">Total Time</string>
    <string name="_00_00_00">00:00:00</string>
    <string name="total_calories_burned">Total Calories Burned</string>
    <string name="_0kcal">0kcal</string>
    <string name="average_speed">Average Speed</string>
    <string name="_0km_h">0km/h</string>
    <string name="update_info">update info</string>
    <string name="update_your_info">Update your info</string>
    <string name="sort_by">Sort by:</string>
    <string name="your_runs">Your Runs</string>
    <string name="statistics">Statistics</string>
    <string name="settings">Settings</string>
    <string name="run_map">Run map</string>

    <string-array name="filter_options">
        <item>Date</item>
        <item>Running Time</item>
        <item>Distance</item>
        <item>Average Speed</item>
        <item>Calories Burned</item>
    </string-array>

    <string-array name="units">
        <item>Kg</item>
        <item>Pounds</item>
    </string-array>

</resources>